--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <h2>Lista cognomi dopo l'aggiunta dell'utente</h2>
   <p id="surname-add"></p>
 
+  <h2>Lista cognomi in ordine alfabetico</h2>
+  <p id="surname-sort"></p>
+
+  <h2>Lista cognomi che parte da 1</h2>
+  <p id="surname-numb"></p>
+
   <script src="js/script.js"></script>
 </body>
 
